--- a/pages/find/find.wxss
+++ b/pages/find/find.wxss
@@ -1,1 +1,39 @@
-/* pages/find/find.wxss */
+/* pages/transaction-list/transactionList.wxss */
+.find-list{
+  width: 100%;
+  height: auto;
+  margin-top:20rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
+}
+.find-list .find-item {
+  height: 200rpx;
+  flex: 0 0 33%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.find-list .find-item .inter{
+  width: 80%;
+  height: 80%;
+  background: #fff;
+  border-radius: 12rpx;
+  box-shadow: 2rpx 2rpx 10rpx #8888883a;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.find-list .find-item .inter .images{
+  width: 60rpx;
+  height: 60rpx;
+  margin:20rpx;
+}
+.find-list .find-item .inter .texts{
+  font-size: 20rpx;
+  color:#333;
+}
