--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -28,4 +28,54 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
+  background:#fff;
+}
+.tips-trans{
+  background:#fff;
+  margin:10rpx auto;
+  width:100%;
+  border-radius: 12rpx;
+  height: 200rpx;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  box-shadow: 5rpx 5rpx 10rpx #8888883a;
+
+}
+.models{
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+.models .model-text{
+  font-size: 32rpx;
+  color:#aaa;
+  line-height: 40rpx;
+}
+.other-items {
+  width: 90%;
+  height: 200rpx;
+  margin:20rpx auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.other-models{
+  width: 30%;
+  height: 200rpx;
+  background: #fff;
+  border-radius: 12rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 2rpx 2rpx 10rpx #8888883a;
+}
+.other-models .text{
+  font-size: 32rpx;
+  color:rgb(109, 108, 108);
 }
