--- a/pages/transaction-list/transactionList.wxss
+++ b/pages/transaction-list/transactionList.wxss
@@ -1,1 +1,60 @@
 /* pages/transaction-list/transactionList.wxss */
+.work-list{
+  width: 100%;
+  height: auto;
+  margin-top:20rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
+}
+.work-list .work-item {
+  height: 200rpx;
+  flex: 0 0 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.work-list .work-item .inter{
+  width: 80%;
+  height: 80%;
+  background: #fff;
+  border-radius: 12rpx;
+  box-shadow: 2rpx 2rpx 10rpx #8888883a;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.work-list .work-item .inter .images{
+  width: 50rpx;
+  height: 50rpx;
+  margin:20rpx;
+}
+.work-list .work-item .inter .texts{
+  font-size: 20rpx;
+  color:#333;
+}
+.up-info{
+  width: 92%;
+  height: auto;
+  margin: 10rpx auto;
+  background:#fff;
+  border-radius: 12rpx;
+}
+.up-times{
+  font-size: 30rpx;
+  line-height: 60rpx;
+  font-weight: 600;
+  margin-left: 20rpx;
+  color:#333;
+}
+.up-adrrass,.up-type{
+  font-size: 28rpx;
+  line-height: 50rpx;
+  font-weight: 500;
+  margin-left: 20rpx;
+  color:#aaa;
+}
