--- a/pages/works/works.wxss
+++ b/pages/works/works.wxss
@@ -1,1 +1,73 @@
 /* pages/works/works.wxss */
+.top-change{
+  width: 100%;
+  height: 50rpx;
+  background-color:#fff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.top-change .items{
+  width: 25%;
+  height: 100%;
+  font-size: 28rpx;
+  text-align: center;
+  color:#333;
+}
+.top-change .cur {
+  color:rgba(101, 211, 165, 0.733);
+}
+
+.list-datas{
+  width: 100%;
+  height: auto;
+}
+.list-items {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10rpx 0;
+  background-color:#fff;
+}
+.list-items .imgs{
+  width: 90%;
+  height: 300rpx;
+  margin: 20rpx auto;
+  /* background:rgb(102, 255, 0); */
+  border-radius: 12rpx;
+}
+.list-items .titles-desc {
+  width: 90%;
+}
+.list-items .titles-desc .title{
+  font-size: 30rpx;
+  font-weight: bold;
+  color:#333;
+  height: 60rpx;
+  line-height: 60rpx;
+}
+.list-items .titles-desc .desc-times{
+  font-size: 26rpx;
+  color:#666;
+  height: 40rpx;
+  line-height: 40rpx;
+}
+.list-items .titles-desc .states {
+   width: 180rpx;
+   background: rgb(9, 118, 161);
+   border-radius: 25rpx;
+   font-size: 24rpx;
+   text-align: center;
+   height: 50rpx;
+  line-height: 50rpx;
+   color:rgba(255, 255, 255, 0.575);
+   margin-left: auto;
+   margin-top: 20rpx;
+   margin-bottom: 20rpx;
+}
+
+.list-items .titles-desc .states-color {
+  background: rgb(34, 230, 109);
+}
