--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -29,30 +29,34 @@
   justify-content: space-between;
   box-sizing: border-box;
   background:#fff;
+  box-shadow: 0 10rpx 10rpx #8888880a;
 }
 .tips-trans{
-  background:#fff;
-  margin:10rpx auto;
-  width:100%;
+  background:rgba(255, 255, 255, 0.616);
+  background: rgba(195, 248, 239, 0.082);
+  
+  margin:20rpx auto;
+  width:90%;
   border-radius: 12rpx;
-  height: 200rpx;
+  height: 160rpx;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  box-shadow: 5rpx 5rpx 10rpx #8888883a;
+  justify-content: space-between;
+  box-shadow: 0 10rpx 10rpx #8888880a;
 
 }
 .models{
+  box-shadow: 10rpx 10rpx 10rpx #8888880a;
   width: 30%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+  border-radius: 12rpx;
 }
 .models .model-text{
-  font-size: 32rpx;
+  font-size: 26rpx;
   color:#aaa;
   line-height: 40rpx;
 }
@@ -67,7 +71,7 @@
 .other-models{
   width: 30%;
   height: 200rpx;
-  background: #fff;
+  background: rgba(195, 248, 239, 0.082);
   border-radius: 12rpx;
   display: flex;
   flex-direction: column;
@@ -76,6 +80,33 @@
   box-shadow: 2rpx 2rpx 10rpx #8888883a;
 }
 .other-models .text{
-  font-size: 32rpx;
+  font-size: 28rpx;
   color:rgb(109, 108, 108);
+}
+.w-icon{
+  width: 50rpx;
+  height: 50rpx;
+  /* background: red; */
+  margin: 0 10rpx;
+}
+.rl-table{
+ height: 160rpx;
+ white-space: nowrap;
+ display: flex;
+ flex-direction: row;
+ box-shadow: 2rpx 2rpx 10rpx #8888883a;
+
+}
+.rl-table-item{
+  width: 200rpx;
+  font-size: 26rpx;
+  height: 60rpx;
+  line-height: 60rpx;
+  text-align: center;
+  display: inline-block;
+  background:rgba(204, 204, 204, 0.164);
+}
+.tables{
+  width: 100%;
+  background:#fff;
 }
