新增日报月报
日报月报

--- a/pages/find/find.wxml
+++ b/pages/find/find.wxml
@@ -22,7 +22,7 @@
         </view>
     </view>
     <view class="find-item">
-        <view class="inter">
+        <view class="inter" catchtap="toWenDa">
            <view class="texts">问答</view>
            <image class="images" src="../../images/wenda.png">
            </image>
